# meta-skill-evloving

./: .gitignore  .gitmodules  CLAUDE.md
AgentSkillOS/: .env.example  .gitignore  ARCHITECTURE.md  README.md  README_zh.md  comparison_en.md  comparison_zh.md  pyproject.toml  run.py
AgentSkillOS/artifacts/: login.html  login_cn.html
AgentSkillOS/benchmark/: __init__.py  __main__.py  base.py
AgentSkillOS/benchmark/AgentSkillOS_bench/: README.md  __init__.py  orchestrator.py  registry.py  types.py
AgentSkillOS/benchmark/AgentSkillOS_bench/evaluators/: __init__.py
AgentSkillOS/benchmark/AgentSkillOS_bench/ranking/: __init__.py  __main__.py  checkpoint.py  compare.py  rank.py
AgentSkillOS/benchmark/AgentSkillOS_bench/tasks/: data_computation_task1.json  data_computation_task2.json  data_computation_task3.json  data_computation_task4.json  data_computation_task5.json  (+25 more)
AgentSkillOS/config/: claude-profiles.example.yaml  config.yaml  config_skill_1000.yaml  config_skill_10000.yaml  config_tree.yaml  config_vector.yaml
AgentSkillOS/data/capability_trees/: tree.html  tree.yaml  tree_200.html  tree_skill_1000.html
AgentSkillOS/docs/: example-bug.html  example-paper.html  example-ui.html  example-video.html  examples.css  examples.js  index.html
AgentSkillOS/scripts/: run-all.sh
AgentSkillOS/scripts/no-skill/: run.sh
AgentSkillOS/scripts/skill-1000/: run-all.sh  run-dag-plan-0.sh  run-dag-plan-1.sh  run-dag-plan-2.sh  run-dag-specified-0.sh  run-free-specified.sh  run-free-style.sh  run-tree-free-style.sh
AgentSkillOS/scripts/skill-10000/: run-all.sh  run-dag-plan-0.sh  run-dag-plan-1.sh  run-dag-plan-2.sh  run-dag-specified-0.sh  run-free-specified.sh  run-free-style.sh  run-tree-free-style.sh
AgentSkillOS/scripts/skill-200/: run-all.sh  run-dag-plan-0.sh  run-dag-plan-1.sh  run-dag-plan-2.sh  run-dag-specified-0.sh  run-free-specified.sh  run-free-style.sh  run-tree-free-style.sh
AgentSkillOS/src/: cache.py  cli.py  config.py  constants.py  logging_config.py  unified_service.py
AgentSkillOS/src/manager/: __init__.py  base.py  registry.py
AgentSkillOS/src/orchestrator/: __init__.py  base.py  registry.py
AgentSkillOS/src/skill_orchestrator/: client.py
AgentSkillOS/src/skill_retriever/: config.py
AgentSkillOS/src/web/: __init__.py  app.py  recipe.py  routes.py  service.py  state.py  visualizer.py
AgentSkillOS/src/workflow/: __init__.py  batch.py  evaluation.py  executor.py  loader.py  models.py  progress.py  service.py
AgentSkillOS/tasks/: github_task_0001.json  github_task_0002.json  github_task_0003.json  github_task_0004.json
meta-harness-tbench2-artifact/: agent.py  claude_cli_llm.py
meta-harness-tbench2-artifact/jobs/2026-05-12__12-27-15/: config.json  result.json
skill-flow/benchmark/agents/: base.py
skill-flow/benchmark/config/: easy10_agentskillos_36k_inject.json  easy10_autoskill_36k_inject.json  easy10_baseline_36k_fixed.json  easy10_baseline_36k_inject.json  easy10_nc1_inject.json  easy10_original_36k_rerun.json  easy10_refined_36k_inject.json  easy10_refined_36k_rerun.json  easy10_refined_inject.json  easy10_skillclaw_36k_inject.json  easy10_skillflow_inject.json  full_agentskillos_36k_inject.json  full_autoskill_36k_inject.json  full_baseline_36k_inject.json  full_refined_36k_inject.json  full_skillclaw_36k_inject.json  full_skillflow_inject.json  sample_pipeline_test.json  sample_skillflow_inject.json
skill-flow/benchmark/core/: commands.py
skill-flow/data/: .gitignore
skill-flow/data/skills-refined-36k/skillsmp/kg2/script/: cli.py  collector.py  concept_dedup.py  embedding_cache.py  pyproject.toml  scoring.py  turtle_builders.py
skill-flow/data/skills-refined-36k/skillsmp/kg2/script/clients/: __init__.py  rate_limiter.py  sparql.py
skill-flow/data/skills-refined-36k/skillsmp/kg2/script/db/: embeddings.py  pending_cites.py
skill-flow/data/skills-refined-agentskillos-36k/skillsmp/cli-duo/: pyproject.toml
skill-flow/data/skills-refined-agentskillos-36k/skillsmp/elevate-code/templates/python-cli/: cli.py  pyproject.toml
skill-flow/data/skills-refined-agentskillos-36k/skillsmp/firefox-browser/rust-cli/: Cargo.toml
skill-flow/data/skills-refined-agentskillos-36k/skillsmp/firefox-browser/rust-cli/resources/: SKILL.md
skill-flow/data/skills-refined-agentskillos-36k/skillsmp/firefox-browser/rust-cli/src/: cli.rs  client.rs  config.rs  error.rs  main.rs  protocol.rs
skill-flow/data/skills-refined-agentskillos-36k/skillsmp/firefox-browser/rust-cli/src/commands/: dev.rs  docs.rs  mod.rs  screenshot.rs  setup.rs
skill-flow/data/skills-refined-agentskillos-36k/skillsmp/local-web/: README.md  pyproject.toml
skill-flow/data/skills-refined-agentskillos-36k/skillsmp/local-web/networks/: __init__.py
skill-flow/data/skills-refined-skillclaw-36k/skillsmp/agent-skills-4/: pyproject.toml
skill-flow/data/skills-refined-skillclaw-36k/skillsmp/agent-skills-4/agent_skills/: __init__.py
skill-flow/data/skills-refined-skillclaw-36k/skillsmp/agent-skills-4/tests/: test_discovery.py
skill-flow/skill_flow/: cli.py
skill-flow/skill_flow/config/: baseline_36k_easy10.json  baseline_easy10_nogt.json  easy10_agentskillos_36k.json  easy10_autoskill_36k.json  easy10_skillclaw_36k.json  full_agentskillos_36k.json  full_autoskill_36k.json  full_baseline_36k.json  full_pipeline.json  full_refined_36k.json  full_skillclaw_36k.json  refined_36k_easy10.json  refined_easy10.json  refined_easy10_nogt.json  refiner.json  refiner_36k.json  refiner_agentskillos_36k.json  refiner_autoskill_36k.json  refiner_skillclaw_36k.json  sample_pipeline.json  sample_test.json
skill-flow/skill_flow/index/: encoder.py
skill-flow/skill_flow/pipeline/: runner.py
skill-flow/skill_flow/query_gen/: query_gen.py
skill-flow/skill_flow/refiner/: __init__.py  cluster.py  engines.py  library.py  merger.py  models.py  quality_filter.py  runner.py
skill-flow/skill_flow/selector/: selector.py
skill-flow/tests/test_skill_flow/: test_query_gen.py
(+17320 files in other folders)
