[^[]*[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-duo"
version = "0.1.0"
description = "Coordinate two AI CLIs on the same repo without collisions."
authors = [{name = "mcarls"}]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
duo = "cli_duo.cli:main"
cli-duo = "cli_duo.cli:main"

[tool.setuptools]
packages = ["cli_duo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
