[project]
name = "kg2-collector"
version = "0.1.0"
description = "Citation Network Paper Collector for KG2"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator
    "TC001",  # type-checking imports (using __future__ annotations)
]

[tool.ruff.lint.isort]
known-first-party = ["kg2_collector"]

[tool.ty.environment]
python-version = "3.11"
# Tell ty that parent dir is the source root (tests use `from script.X`)
root = [".."]

[tool.ty.rules]
# Optional types may have missing attributes (checked at runtime)
possibly-missing-attribute = "ignore"
# Mock objects don't have exact type signatures
invalid-argument-type = "ignore"
# pytest is optional dev dependency
unresolved-import = "ignore"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
